Connected Propotional Editing Mode Very Slow #32979

Closed
opened 2012-10-26 15:34:53 +02:00 by Hikmet Koyuncu · 9 comments

%%%Blender 2.64a - 64-bit
Windows 7 64-bit
Intel Core I5-2500K CPU
8 GB RAM
Intel HD 3000 Graphic Card

Standard Propotional Editing Mode is work fine, but Connected Propotional Editing Mode is very very very slow.%%%

%%%Blender 2.64a - 64-bit Windows 7 64-bit Intel Core I5-2500K CPU 8 GB RAM Intel HD 3000 Graphic Card Standard Propotional Editing Mode is work fine, but Connected Propotional Editing Mode is very very very slow.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%On regular meshes (1000s of vertices) I don't see slowdown.

I need to remind you to the bug reporting guidelines though; always provide an example for how someone else can see an error!%%%

%%%On regular meshes (1000s of vertices) I don't see slowdown. I need to remind you to the bug reporting guidelines though; always provide an example for how someone else can see an error!%%%
Author

%%%Attached example model. 38.000 Verts. Thanks.%%%

%%%Attached example model. 38.000 Verts. Thanks.%%%
Member

%%%Reuploaded as a .gz file since some don't have 7z installed.

btw, you can enabled compression in blender prefs too!%%%

%%%Reuploaded as a .gz file since some don't have 7z installed. btw, you can enabled compression in blender prefs too!%%%
Member

%%%Ooops, I almost forgot to comment! :)

I noticed you had a mask modifier, but even when I removed it, one of my cpu cores spiked for about 10 seconds. I tried hiding a bunch of verts and it improved, but it was still a few seconds before I was able to move the selection around. Although my cpu doesn't seem to handle with prop edit off that well for a grab either. But it does seem like things are a tad slugging in general for such a small mesh.

Im 64bit linux here with gtx550, dual 2.7ghz%%%

%%%Ooops, I almost forgot to comment! :) I noticed you had a mask modifier, but even when I removed it, one of my cpu cores spiked for about 10 seconds. I tried hiding a bunch of verts and it improved, but it was still a few seconds before I was able to move the selection around. Although my cpu doesn't seem to handle with prop edit off that well for a grab either. But it does seem like things are a tad slugging in general for such a small mesh. Im 64bit linux here with gtx550, dual 2.7ghz%%%
Member

%%%I see it's slow - but in 2.61 it was slow too, although faster.

%%%

%%%I see it's slow - but in 2.61 it was slow too, although faster. %%%
Author

%%%Yes. I hope in next versions faster than faster :)%%%

%%%Yes. I hope in next versions faster than faster :)%%%

%%%Fix in svn, should be much faster now.%%%

%%%Fix in svn, should be much faster now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32979
No description provided.