Fix #32979: proportional edit connected was too slow with many vertices on some meshes, now use the system qsort instead of a custom one (which I guess suffered from poor choice of pivot point in some cases).